test: assertSoftly 적용